# ai-brain

./: .coverage.cengshengzongs-MacBook-Pro.local.72628.XKYJfqAx  .gitignore  CLAUDE.md  README.md  pyproject.toml  run_tests.py
.agents/rules/: codebase-memory-mcp.md
.github/workflows/: ci.yml  release.yml
docs/: AI_Agent_Orchestration_SOP.md  DEVELOPMENT.md
docs/images/templates/: architecture_template.html
src/ai_brain/: __init__.py  _testing.py  cli.py  commands.py  completions.py  config.py  constants.py  cron.py  exceptions.py  git_hooks.py  graphify_mcp_wrapper.py  installer.py  mcp.py  platforms.py  plugins.py  registry.py  ui.py  upgraders.py  verifier.py
tests/: __init__.py  conftest.py  test_cli.py  test_commands.py  test_completions.py  test_config.py  test_cron.py  test_e2e_cli.py  test_exceptions.py  test_git_hooks.py  test_global_config_and_pipeline.py  test_installer.py  test_mcp.py  test_platforms.py  test_plugins.py  test_registry.py  test_upgraders.py  test_verifier.py
